--- a/html/disignFile.html
+++ b/html/disignFile.html
@@ -12,7 +12,7 @@
 	<body>
 		<h3>Notices</h3>
 		<p>You may create notice or delete all</p>
-		<form action="/message" method="POST">
+		<form  method="POST">
 		<input type="text" name="Notice" >
 		<input type="submit" name="sendButton" value="send">
 		<input type="submit" name="deleteButton" value="delete">
