--- a/html/disignFile.html
+++ b/html/disignFile.html
@@ -2,24 +2,25 @@
 <html>
   <head>
    	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   	<title>
+			Notices
+		</title>
 		<style>
 
 		</style>
 	</head>
-		<title>
-			Notices
-		</title>
+
 	<body>
 		<h3>Notices</h3>
 		<p>You may create notice or delete all</p>
-		<form action="/message" method="POST">
+		<form action="/message/" method="POST">
 		<input type="text" name="Notice" >
 		<input type="submit" name="sendButton" value="send">
 		<input type="submit" name="deleteButton" value="delete">
 		</form>
 		<ol>
 			{{ range .Store }}
-			<li>{{.}}</li>
+			<li>{{.Owner}}:{{.Note}} </li>
 		{{end}}
 		</ol>
 	</body>
